<resources>
    <string name="app_name">Bg Dictionary</string>
    <string name="title_activity_main">Bg Dictionary</string>
    <string name="search">Search</string>
    <string name="HTTPError">Error extracting the result.</string>
    <string name="WordNotFound">The word is missing.</string>
    <string name="WordMisspelled"> is a wrong spelling for </string>

    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="synonyms">Synonyms</string>
    <string name="misspells">Misspellings</string>
    <string name="misspell">Misspelling</string>
    <string name="error">Error</string>
    <string name="search_label">Dictionary</string>

    <string name="menu_random">Random word</string>
    <string name="menu_random_min">Random</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_favorite">Add Favorite</string>
    <string name="menu_remove_favorite">Remove Favorite</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_about">About</string>
    <string name="dialog_cancel">Close</string>


    <string name="error_favotires">Word already in favorites !</string>
	<string name="success_favotires">Word added to favorites !</string>
	<string name="success_remove_favotires">Word removed from favorites !</string>

    <string name="dialog_about"><![CDATA[ Bg Dictionary is an Online Bulgarian Dictionary -
        <a href="http://rechnik.chitanka.info/">http://rechnik.chitanka.info/</a> ]]>
    </string>
</resources>