<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_random"
        android:icon="@android:drawable/ic_popup_sync"
        android:showAsAction="always"
        android:title="@string/menu_random"
        android:titleCondensed="@string/menu_random_min"/>
    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="com.actionbarsherlock.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_item_add_favorite"
        android:icon="@drawable/ic_action_heart_full"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_favorite"
        />
    <item
        android:id="@+id/menu_item_remove_favorite"
        android:icon="@drawable/ic_action_heart_empty"
        android:showAsAction="ifRoom"
        android:title="@string/menu_remove_favorite"
        />
    <item
        android:id="@+id/menu_item_favorites"
        android:icon="@drawable/ic_action_heart"
        android:showAsAction="ifRoom"
        android:title="@string/menu_favorites"
        />
    <item
        android:id="@+id/menu_item_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:showAsAction="ifRoom"
        android:title="@string/menu_about"/>
</menu>